[gd_scene load_steps=10 format=3 uid="uid://b4xc5fmj418s4"]

[ext_resource type="Script" path="res://scripts/DragonFruit.gd" id="1_gqxc5"]
[ext_resource type="PackedScene" uid="uid://cyjbfydyfja6e" path="res://scenes/game/FireSeed.tscn" id="2_0bycr"]
[ext_resource type="PackedScene" uid="uid://c584cjlgqg5sa" path="res://assets/dragon_fruit_prop/scene.gltf" id="3_qpbpb"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_6c52j"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="6_jj2tc"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="7_6h2hg"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="8_fcu0f"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7vtn5"]
radius = 3.0

[sub_resource type="BoxShape3D" id="BoxShape3D_ko3p3"]
size = Vector3(1.54773, 1.17664, 1.06934)

[node name="DragonFruit" type="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_gqxc5")
projectile_type = ExtResource("2_0bycr")
frosty_seed = ExtResource("2_0bycr")

[node name="ExtraDamageUpgrade" type="Button" parent="."]
offset_left = 1210.0
offset_top = 325.0
offset_right = 1322.0
offset_bottom = 356.0
size_flags_horizontal = 4
text = "All dragon fruits
 get extra damage
cost: 1000"
metadata/_edit_use_anchors_ = true

[node name="ExtraReloadUpgrade" type="Button" parent="."]
offset_left = 1185.0
offset_top = 270.0
offset_right = 1363.0
offset_bottom = 301.0
size_flags_horizontal = 4
text = "Faster reload cost:100
"
metadata/_edit_use_anchors_ = true

[node name="RangeUpgrade" type="Button" parent="."]
offset_left = 1194.0
offset_top = 185.0
offset_right = 1376.0
offset_bottom = 239.0
size_flags_horizontal = 4
text = "Increase range
Cost: 200
"
metadata/_edit_use_anchors_ = true

[node name="dragonShape" parent="." instance=ExtResource("3_qpbpb")]
transform = Transform3D(-4.37114e-09, 0, -0.1, 0, 0.1, 0, 0.1, 0, -4.37114e-09, 0, 0, 0)

[node name="projectile_spawn" type="Node3D" parent="dragonShape"]
transform = Transform3D(-6.24448e-07, 0, 14.2857, 0, 14.1143, 0, -14.2857, 0, -6.24448e-07, -2.85714, 7.14286, -2.85714)

[node name="PatrolZone" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PatrolZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_7vtn5")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_6c52j")

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("6_jj2tc")
initial_state = NodePath("PatrollingState")

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_6h2hg")

[node name="AcquiringState" type="Node" parent="StateChart/CompoundState/PatrollingState"]
script = ExtResource("8_fcu0f")
to = NodePath("../../AcquiringState")
event = &"to_acquiring_state"
delay_in_seconds = "0.0"

[node name="AcquiringState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_6h2hg")

[node name="AttackingState" type="Node" parent="StateChart/CompoundState/AcquiringState"]
script = ExtResource("8_fcu0f")
to = NodePath("../../AttackingState")
event = &"to_attacking_state"
delay_in_seconds = "0.0"

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState/AcquiringState"]
script = ExtResource("8_fcu0f")
to = NodePath("../../PatrollingState")
event = &"to_patrolling_state"
delay_in_seconds = "0.0"

[node name="AttackingState" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("7_6h2hg")

[node name="PatrollingState" type="Node" parent="StateChart/CompoundState/AttackingState"]
script = ExtResource("8_fcu0f")
to = NodePath("../../PatrollingState")
event = &"to_patrolling_state"
delay_in_seconds = "0.0"

[node name="hitbox" type="CollisionShape3D" parent="." groups=["watermelon"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0043335, 0.494806, -0.034668)
shape = SubResource("BoxShape3D_ko3p3")

[connection signal="pressed" from="ExtraDamageUpgrade" to="." method="_on_extra_damage_upgrade_pressed"]
[connection signal="pressed" from="ExtraReloadUpgrade" to="." method="_on_extra_reload_upgrade_pressed"]
[connection signal="pressed" from="RangeUpgrade" to="." method="_on_range_upgrade_pressed"]
[connection signal="pressed" from="RangeUpgrade" to="." method="_on_frost_upgrade_pressed"]
[connection signal="area_entered" from="PatrolZone" to="." method="_on_patrol_zone_area_entered"]
[connection signal="area_exited" from="PatrolZone" to="." method="_on_patrol_zone_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/PatrollingState" to="." method="_on_patrolling_state_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/AcquiringState" to="." method="_on_acquiring_state_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/AcquiringState" to="." method="_on_acquiring_state_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/AttackingState" to="." method="_on_attacking_state_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/AttackingState" to="." method="_on_attacking_state_state_physics_processing"]
